--- a/platform/msvc2008/projects/bimp.vcxproj
+++ b/platform/msvc2008/projects/bimp.vcxproj
@@ -27,6 +27,7 @@
     <ProjectGuid>{F22A86E7-B73F-4F6A-9EA8-E4AE9CC9D885}</ProjectGuid>
     <RootNamespace>bimp</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+	<WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>    
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
